--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@
         height: 128px;
         z-index: 1000; /* High z-index on mobile to stay above content */
       }
-      /* Specific logo positioning for waiting state on mobile */
       #chatContainer:not(.hidden) #messages.waiting ~ .corner-logo {
         position: absolute;
-        top: 10px; /* Positioned at top of page relative to body */
+        top: 10px;
         right: 10px;
         width: 128px;
         height: 128px;
@@ -93,59 +92,59 @@
       }
       #maxClientsContainer {
         position: absolute;
-        bottom: -390px; /* Positioned ~20px below white box and help link */
+        bottom: -390px;
         left: 50%;
         transform: translateX(-50%);
         width: 100%;
-        max-width: 360px; /* Wide enough for radio buttons */
+        max-width: 360px;
         margin: 0;
         padding: 0.75rem;
-        background-color: #000000; /* Solid black background */
+        background-color: #000000;
         border-radius: 0.5rem;
         z-index: 1000;
       }
       #maxClientsRadios {
         display: grid;
-        grid-template-columns: repeat(5, minmax(0, 1fr)); /* Five columns for 2-6 */
-        grid-template-rows: auto auto; /* Two rows */
+        grid-template-columns: repeat(5, minmax(0, 1fr));
+        grid-template-rows: auto auto;
         grid-gap: 0.75rem;
         justify-items: center;
       }
       #maxClientsRadios label:nth-child(1) {
         grid-row: 1;
-        grid-column: 1; /* 2 under column 1 */
+        grid-column: 1;
       }
       #maxClientsRadios label:nth-child(2) {
         grid-row: 1;
-        grid-column: 2; /* 3 under column 2 */
+        grid-column: 2;
       }
       #maxClientsRadios label:nth-child(3) {
         grid-row: 1;
-        grid-column: 3; /* 4 under column 3 */
+        grid-column: 3;
       }
       #maxClientsRadios label:nth-child(4) {
         grid-row: 1;
-        grid-column: 4; /* 5 under column 4 */
+        grid-column: 4;
       }
       #maxClientsRadios label:nth-child(5) {
         grid-row: 1;
-        grid-column: 5; /* 6 under column 5 */
+        grid-column: 5;
       }
       #maxClientsRadios label:nth-child(6) {
         grid-row: 2;
-        grid-column: 1; /* 7 under 2 */
+        grid-column: 1;
       }
       #maxClientsRadios label:nth-child(7) {
         grid-row: 2;
-        grid-column: 2; /* 8 under 3 */
+        grid-column: 2;
       }
       #maxClientsRadios label:nth-child(8) {
         grid-row: 2;
-        grid-column: 3; /* 9 under 4 */
+        grid-column: 3;
       }
       #maxClientsRadios label:nth-child(9) {
         grid-row: 2;
-        grid-column: 4; /* 10 under 5 */
+        grid-column: 4;
       }
       #maxClientsRadios label {
         margin: 0;
@@ -153,7 +152,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
-        font-size: 0.9rem; /* Slightly smaller font for better fit */
+        font-size: 0.9rem;
       }
       #maxClientsRadios input[type="radio"] {
         margin-right: 0.2rem;
@@ -292,32 +291,18 @@
       opacity: 0.6;
       cursor: not-allowed;
     }
-    @media (max-width: 640px) {
-      .button-group {
-        display: flex;
-        justify-content: space-between;
-      }
-      .button-group button {
-        width: 33.3%;
-        margin-bottom: 0;
-      }
-    }
-    /* Previous change: Move white box up by 1cm on PC */
     @media (min-width: 1025px) {
       .bg-white {
-        margin-top: -37.8px; /* Moves the white box up by ~1cm */
+        margin-top: -37.8px;
       }
-    }
-    /* New change: Increase #maxClientsContainer height by 1cm on PC */
-    @media (min-width: 1025px) {
       #maxClientsContainer {
-        min-height: calc(100% + 37.8px); /* Adds ~1cm to match white box height */
-        margin-top: 140px; /* Aligns with white box by matching its upward shift */
+        min-height: calc(100% + 37.8px);
+        margin-top: 140px;
       }
     }
     @media (min-width: 641px) and (max-width: 1024px) {
       #maxClientsContainer {
-        margin-top: 140px; /* Sets +140px margin to align with PC version */
+        margin-top: 140px;
       }
     }
   </style>
@@ -399,7 +384,7 @@
     }
     let isInitiator = false;
     let isConnected = false;
-    let maxClients = 2; // Default to 2, capped at 10
+    let maxClients = 2;
     let totalClients = 0;
     let peerConnections = new Map();
     let dataChannels = new Map();
@@ -412,7 +397,7 @@
     let username = localStorage.getItem('username') || '';
     let usernames = new Map();
     const messageRateLimits = new Map();
-    let codeSentToRandom = false; // Track if code was sent to random board
+    let codeSentToRandom = false;
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -428,17 +413,17 @@
     const cornerLogo = document.getElementById('cornerLogo');
     const button2 = document.getElementById('button2');
 
-    // Logo cycle animation (start with normal logo, wink every 60 seconds)
+    // Logo cycle animation
     let cycleTimeout;
     function triggerCycle() {
       if (cycleTimeout) clearTimeout(cycleTimeout);
       cornerLogo.classList.add('wink');
       cycleTimeout = setTimeout(() => {
         cornerLogo.classList.remove('wink');
-      }, 500); // 0.5 seconds for wink
-      setTimeout(() => triggerCycle(), 60000); // Repeat every 60 seconds
+      }, 500);
+      setTimeout(() => triggerCycle(), 60000);
     }
-    setTimeout(() => triggerCycle(), 60000); // Start first wink after 60 seconds
+    setTimeout(() => triggerCycle(), 60000);
 
     const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
     console.log('WebSocket created');
@@ -446,7 +431,6 @@
     socket.onopen = () => {
       console.log('WebSocket opened');
       socket.send(JSON.stringify({ type: 'connect', clientId }));
-      // Check for code parameter on page load
       const urlParams = new URLSearchParams(window.location.search);
       const codeParam = urlParams.get('code');
       if (codeParam && validateCode(codeParam)) {
@@ -473,12 +457,10 @@
         const newSocket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
         newSocket.onopen = () => {
           console.log('Reconnected, sending connect');
-          if (newSocket.readyState === WebSocket.OPEN) {
-            socket.send(JSON.stringify({ type: 'connect', clientId }));
-            if (code && username && validateCode(code) && validateUsername(username)) {
-              console.log('Rejoining with code:', code);
-              newSocket.send(JSON.stringify({ type: 'join', code, clientId, username }));
-            }
+          newSocket.send(JSON.stringify({ type: 'connect', clientId }));
+          if (code && username && validateCode(code) && validateUsername(username)) {
+            console.log('Rejoining with code:', code);
+            newSocket.send(JSON.stringify({ type: 'join', code, clientId, username }));
           }
         };
         newSocket.onerror = socket.onerror;
@@ -515,7 +497,7 @@
         }
         if (message.type === 'init') {
           clientId = message.clientId;
-          maxClients = Math.min(message.maxClients, 10); // Cap maxClients at 10
+          maxClients = Math.min(message.maxClients, 10);
           isInitiator = message.isInitiator;
           totalClients = 1;
           console.log(`Initialized client ${clientId}, username: ${username}, maxClients: ${maxClients}, isInitiator: ${isInitiator}`);
@@ -553,7 +535,7 @@
           }
         }
         if (message.type === 'max-clients') {
-          maxClients = Math.min(message.maxClients, 10); // Cap maxClients at 10
+          maxClients = Math.min(message.maxClients, 10);
           console.log(`Max clients updated to ${maxClients} for code: ${code}`);
           updateMaxClientsUI();
         }
@@ -579,7 +561,7 @@
       maxClientsRadios.innerHTML = '';
       if (isInitiator) {
         maxClientsContainer.classList.remove('hidden');
-        for (let n = 2; n <= 10; n++) { // Limit options to 10
+        for (let n = 2; n <= 10; n++) {
           const label = document.createElement('label');
           label.className = 'text-white flex items-center';
           const input = document.createElement('input');
@@ -621,7 +603,7 @@
 
     function setMaxClients(n) {
       if (isInitiator && clientId && socket.readyState === WebSocket.OPEN) {
-        maxClients = Math.min(n, 10); // Cap at 10
+        maxClients = Math.min(n, 10);
         socket.send(JSON.stringify({ type: 'set-max-clients', maxClients: maxClients, code, clientId }));
         updateMaxClientsUI();
       }
@@ -795,7 +777,7 @@
           return;
         }
         if (!data.messageId || !data.content || !data.username) {
-          console.log(`Invalid message from ${targetId}:`, data);
+          console.log(`Invalid message format from ${targetId}:`, data);
           return;
         }
         if (processedMessageIds.has(data.messageId)) {
@@ -1171,17 +1153,16 @@
     };
 
     function autoConnect(codeParam) {
-      // Immediately hide all non-chat containers to prevent UI flickering
+      console.log('autoConnect running with code:', codeParam);
       initialContainer.classList.add('hidden');
       usernameContainer.classList.add('hidden');
       connectContainer.classList.add('hidden');
-      chatContainer.classList.add('hidden'); // Start hidden, only show if valid
+      chatContainer.classList.add('hidden');
       codeDisplayElement.classList.add('hidden');
       copyCodeButton.classList.add('hidden');
       username = localStorage.getItem('username')?.trim() || '';
       code = codeParam;
       if (validateUsername(username) && validateCode(code)) {
-        // Show chat UI and initiate connection
         chatContainer.classList.remove('hidden');
         codeDisplayElement.textContent = `Using code: ${code}`;
         codeDisplayElement.classList.remove('hidden');
@@ -1196,7 +1177,6 @@
           }, { once: true });
         }
       } else {
-        // Show initial container for invalid username or code
         initialContainer.classList.remove('hidden');
         statusElement.textContent = 'Invalid username or code format. Please enter a valid username and code.';
       }
