--- a/random.html
+++ b/random.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Codes</title>
+    <title>Anonomoose Random Chat</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
     <link rel="icon" type="image/png" href="https://cdnjs.cloudflare.com/ajax/libs/twemoji/14.0.2/72x72/1f60e.png"/>
     <style>
         body {
             background-color: #000;
             color: #fff;
-            font-family: Arial, sans-serif;
+            min-height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
             margin: 0;
+            padding-top: 140px;
         }
         .container {
             text-align: center;
@@ -24,6 +24,8 @@
             color: #000;
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            max-width: 500px;
+            width: 100%;
         }
         #codeList {
             list-style: none;
@@ -32,53 +34,77 @@
         .code-item {
             padding: 10px;
             margin: 5px 0;
-            background-color: #f0f0f0;
+            background-color: #10b981;
+            color: white;
             border-radius: 5px;
             cursor: pointer;
+            transition: background-color 0.2s ease;
         }
         .code-item:hover {
-            background-color: #e0e0e0;
+            background-color: #059669;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Random Codes</h1>
+        <h1 class="text-2xl font-bold mb-6 text-center text-gray-800">Pick a Random Chat</h1>
+        <div id="status" class="text-center mb-4 text-gray-600">Loading available chats...</div>
         <ul id="codeList"></ul>
+        <div class="text-center mt-4">
+            <a href="https://anonomoose.com/index.html" class="text-blue-500 hover:underline">Back to Chat</a>
+        </div>
     </div>
     <script>
         const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
         const codeList = document.getElementById('codeList');
+        const statusElement = document.getElementById('status');
 
         socket.onopen = () => {
-            console.log('WebSocket opened');
+            console.log('Random page WebSocket opened');
+            statusElement.textContent = 'Loading available chats...';
             socket.send(JSON.stringify({ type: 'get-random-codes' }));
         };
 
         socket.onmessage = (event) => {
             console.log('Received message:', event.data);
-            const data = JSON.parse(event.data);
-            if (data.type === 'random-codes') {
-                codeList.innerHTML = '';
-                data.codes.forEach(code => {
-                    const li = document.createElement('li');
-                    li.className = 'code-item';
-                    li.textContent = code;
-                    li.onclick = () => {
-                        socket.send(JSON.stringify({ type: 'remove-random-code', code }));
-                        window.location.href = `https://anonomoose.com/index.html?code=${code}`;
-                    };
-                    codeList.appendChild(li);
-                });
+            try {
+                const data = JSON.parse(event.data);
+                if (data.type === 'random-codes') {
+                    codeList.innerHTML = '';
+                    if (data.codes.length === 0) {
+                        statusElement.textContent = 'No available chats. Try again later.';
+                    } else {
+                        statusElement.textContent = 'Select a chat to join:';
+                        data.codes.forEach(code => {
+                            const li = document.createElement('li');
+                            li.className = 'code-item';
+                            li.textContent = code;
+                            li.onclick = () => {
+                                console.log('Selected code:', code);
+                                socket.send(JSON.stringify({ type: 'remove-random-code', code }));
+                                window.location.href = `https://anonomoose.com/index.html?code=${code}`;
+                            };
+                            codeList.appendChild(li);
+                        });
+                    }
+                }
+            } catch (error) {
+                console.error('Error parsing message:', error);
+                statusElement.textContent = 'Error loading chats. Please try again.';
             }
         };
 
         socket.onerror = (error) => {
             console.error('WebSocket error:', error);
+            statusElement.textContent = 'Connection error. Please try again.';
         };
 
         socket.onclose = () => {
             console.log('WebSocket closed');
+            statusElement.textContent = 'Disconnected. Reconnecting...';
+            setTimeout(() => {
+                window.location.reload();
+            }, 5000);
         };
     </script>
 </body>
