--- a/index.html
+++ b/index.html
@@ -257,13 +257,15 @@
       margin-bottom: 0.5rem;
     }
     .button-group button {
-      padding: 0.35rem 0.9rem;
+      padding: 0.23rem 0.9rem; /* Reduced vertical padding to 2/3 (0.35rem * 2/3 ≈ 0.23rem) */
       border-radius: 0.375rem;
       cursor: pointer;
       margin: 0 0.25rem;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       transition: all 0.2s ease;
       width: 33.3%;
+      font-size: 0.875rem; /* Equivalent to text-sm, ensures text fits */
+      line-height: 1.25rem; /* Adjusted to fit reduced height */
     }
     #copyCodeButton {
       background-color: #10b981;
