--- a/index.html
+++ b/index.html
@@ -253,11 +253,11 @@
     .button-group {
       display: flex;
       justify-content: space-between;
-      margin-top: 0.1rem;
-      margin-bottom: 0.1rem;
+      margin-top: 0.5rem;
+      margin-bottom: 0.5rem;
     }
     .button-group button {
-      padding: 0.15rem 0.9rem;
+      padding: 0.35rem 0.9rem;
       border-radius: 0.375rem;
       cursor: pointer;
       margin: 0 0.25rem;
@@ -305,6 +305,13 @@
         margin-top: 140px;
       }
     }
+    @media (max-width: 640px) {
+  .button-group button {
+    padding: 0.5rem 1rem; /* Increase padding for larger touch targets */
+    font-size: 0.175rem; /* Explicitly set font size (14px) */
+    width: calc(33.33% - 0.5rem); /* Ensure margins don't cause overflow */
+  }
+}
   </style>
 </head>
 <body class="bg-black min-h-screen flex items-center justify-center">
