--- a/index.html
+++ b/index.html
@@ -339,9 +339,11 @@
     width: 36%; /* Make button1 wider */
   }
 
-  #button2, #copyCodeButton {
-    width: 32%; /* Make button2 and copyCodeButton narrower */
+  #button2,
+    width: 36%; /* Make button2 and copyCodeButton narrower */
   }
+  #copyCodeButton {
+    width: 28%; 
 }
   </style>
 </head>
