--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     width: 36%; /* Make button1 wider */
   }
 
-  #button2, {
+  #button2 {
     width: 36%; /* Make button2 and copyCodeButton narrower */
   }
   #copyCodeButton {
