--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
     @media (max-width: 640px) {
   .button-group button {
     padding: 0.8rem 0.9rem; /* Increase padding for larger touch targets */
-    font-size: 0.65rem; /* Explicitly set font size (14px) */
+    font-size: 0.9rem; /* Explicitly set font size (14px) */
     width: calc(33.33% - 0.5rem); /* Ensure margins don't cause overflow */
   }
 }
@@ -366,8 +366,8 @@
       <div id="chatContainer" class="hidden">
         <button id="newSessionButton" class="bg-red-500 text-white px-2 py-1 rounded w-full mb-1 rounded hover:bg-red-600 transition-colors hidden">New Session</button>
         <div class="button-group">
-          <button id="button1">Send Code to Random Board</button>
-          <button id="button2">Pick Random Code to Chat</button>
+          <button id="button1">Send Code</button>
+          <button id="button2">Random Chat</button>
           <button id="copyCodeButton">Copy Code</button>
         </div>
         <div id="messages" class="border border-gray-300 p-4 h-64 overflow-y-auto mb-4 rounded"></div>
